Remove prefix availability domains.

--- a/component/template.hbs
+++ b/component/template.hbs
@@ -151,6 +151,9 @@
           classNames="form-control"
           placeholder=(t "nodeDriver.oci.subnet.placeholder")
         }}
+        <p class="help-block">
+          {{t 'nodeDriver.oci.subnet.helpText'}}
+        </p>
       </div>
 
     </div>
