Update label for private IP option.

--- a/component/template.hbs
+++ b/component/template.hbs
@@ -158,7 +158,7 @@
 
       <div class="col span-6">
         <label class="acc-label">
-          {{t "nodeDriver.azure.usePrivateIp.label"}}
+          {{t "nodeDriver.oci.usePrivateIp.label"}}
         </label>
         <div>
           {{input
